fixed bugs and added dark mode

--- a/style.css
+++ b/style.css
@@ -12,10 +12,16 @@ body {
 }
 
 #game-container {
+    width: 305px; /* Set a fixed width in pixels */
+    overflow: hidden; /* Hide content that overflows the fixed width */
+    white-space: nowrap; /* Prevent line breaks in the text */
+
     padding: 150px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);/*    background-color: rgb(53, 53, 53);  
+                                        border-radius: 10px;
+                                        box-shadow: 0 0 10px rgba(49, 49, 49, 0.1);*/
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -76,7 +82,7 @@ button {
     border: 1px solid #888;
     border-radius: 5px;
     max-width: 20%; 
-    height: 40%; 
+    height: 45%; 
     position: relative;
     text-align: center;
     font-family: "Arial"; 
@@ -131,11 +137,12 @@ button {
 
 .difficulty_submit{
     font-family: sans-serif;
-    font-size: 150%;
-    width: 25%;
+    font-size: 20px;
+    width: 30%;
     height: 50%;
     border-radius: 5px;
     background-color: d8d8d8;
+    padding: 10px;
     
 }
 
@@ -160,3 +167,64 @@ transition: none;
 }
 
 
+/* The switch - the box around the slider */
+/* CODE FROM W3 TUTORIALS */
+.switch {
+position: relative;
+display: inline-block;
+width: 60px;
+height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+opacity: 0;
+width: 0;
+height: 0;
+}
+
+/* The slider */
+.slider {
+position: absolute;
+cursor: pointer;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #ccc;
+-webkit-transition: .4s;
+transition: .4s;
+}
+
+.slider:before {
+position: absolute;
+content: "";
+height: 26px;
+width: 26px;
+left: 4px;
+bottom: 4px;
+background-color: #F48037;
+-webkit-transition: .4s;
+transition: .4s;
+}
+
+input:checked + .slider {
+background-color: #000000;
+}
+
+
+input:checked + .slider:before {
+-webkit-transform: translateX(26px);
+-ms-transform: translateX(26px);
+transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+border-radius: 34px;
+}
+
+.slider.round:before {
+border-radius: 50%;
+}
+/* FROM W3 SCHOOL END */
